CM-1058: Fix spacing issue on error page

--- a/src/gatsby/src/styles/search.scss
+++ b/src/gatsby/src/styles/search.scss
@@ -1217,6 +1217,7 @@ div[class$="-singleValue"] {
 }
 
 .no-results-container {
+  padding-top: 16px;
   .no-results-header {
     display: flex;
     margin-bottom: 24px;
